<resources>
    <string name="app_name">FashionApp</string>
    <string name="open_fashion">Open Fashion</string>
    <string name="support">support@openui.design +60 825 876"\n" 08:00 - 22:00 - Everyday</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="blog">Blog</string>
    <string name="copyright">Copyright© OpenUI All Rights Reserved.</string>
</resources>