<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0.33"
            android:contentDescription="@string/app_name"
            android:src="@drawable/twitter" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0.33"
            android:contentDescription="@string/app_name"
            android:src="@drawable/instagram" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0.33"
            android:contentDescription="@string/app_name"
            android:src="@drawable/youtube" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/line_footer" />

    <TextView
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/support"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/line_footer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:includeFontPadding="false"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:includeFontPadding="false"
            android:text="@string/contact"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:includeFontPadding="false"
            android:text="@string/blog"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45.25dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="@color/Label"
        android:background="#33C4C4C4"
        android:textSize="12sp"/>
</LinearLayout>